# gnome-control-center

./: .gitignore  NEWS  README.md  meson.build
.github/workflows/: build.yml  main.yml  release.yml
debian/: .control.swp  changelog  clean  control  control.in  copyright  files  gbp.conf  gnome-control-center-data.install  gnome-control-center.lintian-overrides  rules  salsa-ci.yml  watch
debian/patches/: Check-best_mode-exist-before-adding-flag.patch  Fixed-Czech-translation.patch  Panels-Rename-lock-panel-into-screen-panel.patch  Revert-firmware-security-Hide-the-panel-when-chassis-type.patch  Revert-keyboard-Spawn-tecla-to-show-keyboard-map.patch  Revert-mouse-Use-monochrome-assets.patch  Revert-split-row-Recolor-the-illustration-with-accent-col.patch  Revert-system-wwan-Depend-on-gcr4.patch  Update-Abkhazian-translation.patch  Update-Brazilian-Portuguese-translation.patch  Update-Catalan-translation-1.patch  Update-Catalan-translation.patch  Update-Chinese-Taiwan-translation.patch  Update-Croatian-translation-1.patch  Update-Croatian-translation.patch  Update-Dutch-translation.patch  Update-Friulian-translation.patch  Update-Georgian-translation.patch  Update-German-translation-Fixes-56.patch  Update-German-translation.patch  Update-Hebrew-translation.patch  Update-Icelandic-translation-1.patch  Update-Icelandic-translation-2.patch  Update-Icelandic-translation-3.patch  Update-Icelandic-translation-4.patch  Update-Icelandic-translation-5.patch  Update-Icelandic-translation-6.patch  Update-Icelandic-translation.patch  Update-Japanese-translation-1.patch  Update-Japanese-translation-2.patch  Update-Japanese-translation.patch  Update-Kazakh-translation-1.patch  Update-Kazakh-translation.patch  Update-Nepali-translation.patch  Update-Norwegian-Bokm-l-translation-1.patch  Update-Norwegian-Bokm-l-translation.patch  Update-Occitan-translation.patch  Update-Persian-translation.patch  Update-Portuguese-translation-1.patch  Update-Portuguese-translation-2.patch  (+94 more)
debian/source/: include-binaries
debian/upstream/: metadata
man/: gnome-control-center.xml
panels/: meson.build
panels/applications/: cc-applications-panel.c
panels/common/: cc-common-language.c  cc-common-language.h  cc-util.c  cc-util.h
panels/connectivity/: cc-connectivity-panel.c  cc-connectivity-panel.h  cc-connectivity-panel.ui  connectivity.gresource.xml  gnome-connectivity-panel.desktop.in.in  meson.build
panels/datetime/: cc-datetime-panel.c  cc-datetime-panel.ui
panels/display/: cc-display-arrangement.c  cc-display-config-dbus.c  cc-display-config.c  cc-display-config.h  cc-display-settings.c  cc-display-settings.ui
panels/info-overview/: cc-info-overview-panel.c  cc-info-overview-panel.ui
po/: POTFILES.in  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  (+70 more)
shell/: cc-panel-list.c  cc-panel-loader.c
subprojects/libgxdp/src/: gxdp-config.h.meson  gxdp-external-window-wayland.c  gxdp-external-window-wayland.h  gxdp-external-window-x11.c  gxdp-external-window-x11.h  gxdp-external-window.c  gxdp-external-window.h  gxdp-wayland.c  gxdp-wayland.h  gxdp.c  gxdp.h  meson.build
subprojects/libgxdp/tests/: meson.build  test-portal.c  test-stacking.py  test-wayland-client.c  test-x11-client.c
(+136 files in other folders)
